divs to Box, styleprops, fix overflow

--- a/app/frontend/src/layout/MainArea.scss
+++ b/app/frontend/src/layout/MainArea.scss
@@ -1,22 +1,28 @@
 #main_area {
-	flex-grow:1;
-	flex-shrink:1;
-	overflow:hidden;
-	display:flex;
-	flex-direction:column;
-	flex-wrap:nowrap;
+    visibility:visible;
+    overflow:hidden;
 
-	> * {
-		flex-grow:1;
-		flex-shrink:0;
-		flex-basis:auto;
-		overflow:hidden;
+    #main_content {
+        overflow:auto;
+    }
+// 	flex-grow:1;
+// 	flex-shrink:1;
+// 	overflow:hidden;
+// 	display:flex;
+// 	flex-direction:column;
+// 	flex-wrap:nowrap;
 
-		&#main_content {
-			display:flex;
-			flex-direction:column;
-			flex-wrap:nowrap;
-		}
-		&#main_content_controls { flex-grow:0; }
-	}
+// 	> * {
+// 		flex-grow:1;
+// 		flex-shrink:0;
+// 		flex-basis:auto;
+// 		overflow:hidden;
+
+// 		&#main_content {
+// 			display:flex;
+// 			flex-direction:column;
+// 			flex-wrap:nowrap;
+// 		}
+// 		&#main_content_controls { flex-grow:0; }
+// 	}
 }
